hphp/hack/test/typecheck/strict_call_tany4.php.exp
File "strict_call_tany4.php", line 3, characters 16-18:
Was expecting a return type hint (Typing[4030])
